@@ -16,6 +16,7 @@ Version 0.7.0~dev
 	* Changed default log line format to be more verbose.
 	* data: Removed useless SQL functions.
 	* Stop using deprecated webengine-spv 'spv' APIs, migrate to 'spv.services'.
+	* Add history support in BaseJob class, closes: #3038.
 
 Version 0.6.2 Released on 2010/01/27
 
